# spec2doc

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  NUITKA_BUILD_GUIDE.md  README.md  api_doc_service.py  app.py  biome.json  build_nuitka.bat  build_nuitka_advanced.bat  build_nuitka_onefile.bat  db_doc_service.py  db_introspect.py  generators.py  index.html  models.py  package.json  parsers.py  pnpm-lock.yaml  requirements.txt  tailwind.config.ts  ui_main.py  vite.config.ts  word_render.py  workers.py
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
assets/: api_template.docx  create-api-template-docxtemplater.cjs  create-api-template.cjs  create-db-template.cjs  db_template.docx  generate-api-doc.cjs  接口文档模板.docx  数据库设计文档模板.docx
assets/test-data/: mysql.sql  postgresql.sql  sqlite.sql  sqlserver.sql
docs/: auto-update-setup.md  database-template-guide.md  openapi-template-guide.md
scripts/: gen-db-template.cjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/db/: connection.rs  mod.rs  ssh_tunnel.rs  types.rs
src-tauri/src/db/schema/: mod.rs  mysql.rs  postgres.rs  sqlite.rs  sqlserver.rs
src/components/: ThemeToggle.tsx  UpdateDialog.tsx
src/hooks/: use-theme.tsx  use-updater.ts
src/lib/: defaultPath.ts  generationSettings.ts  templateSettings.ts
src/pages/: Index.tsx
src/services/: ddlParser.test.ts  ddlParser.ts  documentService.test.ts  (+2 more)
(+22 files in other folders)
