[package]
name = "spec2doc"
version = "0.0.1"
description = "Convert OpenAPI specs and database structures into Word documents"
authors = ["Yi Liu"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "spec2doc_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "spec2doc_app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "mysql", "postgres", "sqlite"] }
tiberius = { version = "0.12", default-features = false, features = ["tds73", "rustls"] }
tokio-util = { version = "0.7", features = ["compat"] }
ssh2 = "0.9"
openssl = { version = "0.10", features = ["vendored"] }
async-trait = "0.1"
urlencoding = "2"
